
Mon Jul 17 15:07:08 EDT 1995	Paul Park	(pjpark@mit.edu)
	* srv_main.c - Add stash-file handling and supply appropriate value to
		krb5_db_fetch_mkey().  Add KDC profile reading/handling to
		supercede any values supplied on the command line.  Add call
		to new admin_init() which initializes the admin module.
	* srv_key.c - Add stash-file handling.
	* admin.c - Add admin_init() which takes supplied per-realm defaults to
		initialize the default database entry.
	* kadm5_defs.h - Change PROTOTYPE to KRB5_PROTOTYPE.  Update prototype
		for key_init and add admin_init.
	* kadmind5.M - Add description of -s stashfile.


Fri Jul 7 16:01:37 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Remove all explicit library handling and LDFLAGS.
	* configure.in - Add USE_<mumble> and KRB5_LIBRARIES.


Fri Jun 30 14:35:00 EDT 1995	Paul Park	(pjpark@mit.edu)
	* srv_main.c - Instead of moving up the initialization and calls to
		key_init() before the call to daemon(), have daemon() not
		disassociate from the terminal if the -m flag is set.
	* configure.in - Add --with-dbm to select between Berkeley and DBM
		KDC database format.

Tue Jun 27 18:14:33 1995  Sam Hartman  <hartmans@tardis.MIT.EDU>

	* srv_main.c (main): Rearrange code so that we ask for the master key *before* we detach from the controlling terminal.  This causes the Kerberos context to be initialized in the parent before the fork; I'm not sure if this is acceptable or not.

Tue Jun 27 16:02:24 EDT 1995	Paul Park	(pjpark@mit.edu)
	* srv_net.c, srv_acl.c, proto_serv.c - Add signal name parameter to
		signal handlers to conform to prototype.

Thu Jun 15 17:54:31 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Change explicit library names to -l<lib> form, and
		change target link line to use $(LD) and associated flags.
		Also, remove DBMLIB, it was not used.
	* configure.in - Remove dbm library checks, these are no longer needed
		with the Berkeley database code.  Also, add shared library
		usage check.
